# cardmind

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: package.json
apps/api/scripts/: copy-assets.mjs
apps/api/src/: app.ts  index.ts  repositories.ts  types.ts
apps/api/src/db/: database.ts  init.ts  schema.sql
apps/api/src/extraction/: mockExtractor.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  GraphView.tsx  api.ts  styles.css  types.ts
docs/: demo.md  design.md  verify.md
docs/product/: core-object-model-v0.1.md
scripts/: create-desktop-shortcut.ps1  start-cardmind.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: extractor.rs  lib.rs  main.rs  models.rs  openai.rs  repository.rs
