[package]
name = "cardmind"
version = "0.1.0"
description = "A local-first personal knowledge graph that turns AI conversations into connected knowledge cards."
authors = ["CardMind"]
edition = "2021"
license = "MIT"

[lib]
name = "cardmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
